[package]
name = "command"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ptrscan"
path = "src/main.rs"

[dependencies]
libptrscan = { path = "../libptrscan" }
argh = { git = "https://github.com/google/argh", default-features = false, features = ["help"] }
rayon = { version = "1.10.0", default-features = false }

[build-dependencies]
cc = "1.0"
