[package]
name = "libptrscan"
version = "0.7.4"
edition = "2021"

[lib]
name = "ptrscan"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "ios")']
rustflags = ["-C", "link-arg=-mios-version-min=15.0"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.machx]
version = "0.4.9"
default-features = false

[features]
nightly = []
